home, aboutUs horizontal scroll fixed

--- a/src/app/user/about-us/about-us.component.css
+++ b/src/app/user/about-us/about-us.component.css
@@ -2,3 +2,6 @@
 a:hover{
     color:#fff;
 }
+.AboutUsBanner{
+    float: left;
+}
