--- a/src/app/user/user-dashboard/personal-property-distributed/personal-property-distributed.component.css
+++ b/src/app/user/user-dashboard/personal-property-distributed/personal-property-distributed.component.css
@@ -742,7 +742,7 @@ footer .social ul li a i{
     .main-content.hotdocs .col-md-4.text-right{
         text-align: center;
     }
-    .main-content h2 {
+    .main-content.tellusaboutyou h2 {
         font-size: 24px;
         margin: 0 0 20px;
     }
